--- a/eeducation-front/src/app/create-course/create-course.component.html
+++ b/eeducation-front/src/app/create-course/create-course.component.html
@@ -13,13 +13,23 @@
                  placeholder="name"/>
           <mat-error>name can not be blank.</mat-error>
         </mat-form-field>
+        <mat-form-field class="field-full-width">
+          <input id="description"
+                 matInput
+                 formControlName="description"
+                 placeholder="description"/>
+          <mat-error>description can not be blank.</mat-error>
+        </mat-form-field>
 
         <mat-form-field class="field-full-width">
           <input id="begins"
                  matInput
                  formControlName="begins"
                  placeholder="begins"
+                 [matDatepicker]="pickerBegins"
           />
+          <mat-datepicker-toggle matSuffix [for]="pickerBegins"></mat-datepicker-toggle>
+          <mat-datepicker #pickerBegins></mat-datepicker>
           <mat-error>begins can not be blank.</mat-error>
         </mat-form-field>
         <mat-form-field class="field-full-width">
@@ -27,18 +37,21 @@
                  matInput
                  formControlName="ends"
                  placeholder="ends"
+                 [matDatepicker]="pickerEnds"
           />
+          <mat-datepicker-toggle matSuffix [for]="pickerEnds"></mat-datepicker-toggle>
+          <mat-datepicker #pickerEnds></mat-datepicker>
           <mat-error>ends can not be blank.</mat-error>
         </mat-form-field>
         <mat-form-field class="field-full-width">
           <mat-select id="school"
-                 formControlName="school"
-                 placeholder="school">
-            <mat-option value="1">
-              Osnovna
+                      formControlName="school"
+                      placeholder="school">
+            <mat-option value="-1">
+              None
             </mat-option>
-            <mat-option value="1">
-              Srednja
+            <mat-option *ngFor="let school of schools" [value]=school.id>
+              {{school.name}}
             </mat-option>
           </mat-select>
 
@@ -53,7 +66,7 @@
           <mat-error>teachers can not be blank.</mat-error>
         </mat-form-field>
       </mat-card-content>
-      <button id="loginBt" mat-stroked-button color="primary" class="btn-block">Log in</button>
+      <button id="createBt" mat-stroked-button color="primary" class="btn-block">Create course</button>
     </form>
   </mat-card>
 
