--- a/eeducation-front/src/app/edit-course/edit-course.component.html
+++ b/eeducation-front/src/app/edit-course/edit-course.component.html
@@ -1,1 +1,51 @@
-<p>edit-course works!</p>
+<div class="form-wrapper">
+  <mat-card class="box" id="login-box">
+    <mat-card-header>
+      <mat-icon class="account-icon">account_circle</mat-icon>
+    </mat-card-header>
+
+    <form class="form" [formGroup]="courseForm" (ngSubmit)="courseForm.valid && edit()">
+      <mat-card-content>
+        <mat-form-field class="field-full-width">
+          <input id="name"
+                 matInput
+                 formControlName="name"
+                 placeholder="name"/>
+          <mat-error>name can not be blank.</mat-error>
+        </mat-form-field>
+        <mat-form-field class="field-full-width">
+          <input id="description"
+                 matInput
+                 formControlName="description"
+                 placeholder="description"/>
+          <mat-error>description can not be blank.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field class="field-full-width">
+          <input id="begins"
+                 matInput
+                 formControlName="begins"
+                 placeholder="begins"
+                 [matDatepicker]="pickerBegins"
+          />
+          <mat-datepicker-toggle matSuffix [for]="pickerBegins"></mat-datepicker-toggle>
+          <mat-datepicker #pickerBegins></mat-datepicker>
+          <mat-error>begins can not be blank.</mat-error>
+        </mat-form-field>
+        <mat-form-field class="field-full-width">
+          <input id="ends"
+                 matInput
+                 formControlName="ends"
+                 placeholder="ends"
+                 [matDatepicker]="pickerEnds"
+          />
+          <mat-datepicker-toggle matSuffix [for]="pickerEnds"></mat-datepicker-toggle>
+          <mat-datepicker #pickerEnds></mat-datepicker>
+          <mat-error>ends can not be blank.</mat-error>
+        </mat-form-field>
+      </mat-card-content>
+      <button id="editBt" mat-stroked-button color="primary" class="btn-block">Edit course</button>
+    </form>
+  </mat-card>
+
+</div>
