create, edit and delete lesson

--- a/eeducation-front/src/app/edit-lesson/edit-lesson.component.html
+++ b/eeducation-front/src/app/edit-lesson/edit-lesson.component.html
@@ -39,7 +39,7 @@
             <textarea (keyup)="textChange($event)" id="textArea"></textarea>
           </div>
         </div>
-        <button>Add lesson</button>
+        <button>Edit lesson</button>
       </form>
     </mat-card>
   </div>
