--- a/eeducation-front/src/app/lesson/lesson.component.html
+++ b/eeducation-front/src/app/lesson/lesson.component.html
@@ -1,1 +1,26 @@
-<p>lesson works!</p>
+<div>
+  <h1>{{lesson.name}}</h1>
+  <div id="lessonContent"></div>
+  <div>
+    <h2>Comments</h2>
+    <span *ngFor="let comment of lesson.comments"><app-comment *ngIf="!comment.reply" [lesson]="lesson"
+                                                               [comment]="comment"></app-comment></span>
+  </div>
+  <div>
+    <mat-card class="create-lesson-card">
+      <form class="form" [formGroup]="addCommentForm" (ngSubmit)="addCommentForm.valid && onCommentSubmit()">
+        <mat-form-field class="field-full-width">
+          <textarea id="commentText"
+                    matInput
+                    formControlName="commentText"
+                    placeholder="commentText"></textarea>
+          <mat-error>name can not be blank.</mat-error>
+        </mat-form-field>
+        <button>Add comment</button>
+      </form>
+    </mat-card>
+  </div>
+  <button (click)="delete()">Delete lesson</button>
+  <button (click)="edit()">Edit lesson</button>
+
+</div>
