--- a/eeducation-front/src/styles.scss
+++ b/eeducation-front/src/styles.scss
@@ -90,3 +90,19 @@ body {
   cursor: pointer;
   text-decoration: underline;
 }
+.create-lesson-card{
+  margin: auto;
+  opacity: 1;
+  padding: 60px 50px 40px 50px;
+  width: 100%;
+  background: #fff;
+  border-radius: 10px;
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  z-index: 5;
+  max-width: 50%;
+}
+.create-lesson-preview{
+
+}
