--- a/eeducation-front/src/app/course-students/course-students.component.html
+++ b/eeducation-front/src/app/course-students/course-students.component.html
@@ -1,10 +1,19 @@
 <div>
-  <table>
-    <tr *ngFor="let student of course.students">
-      <td>
-        {{student.name}}
-        {{student.email}}
-      </td>
-    </tr>
+  <table mat-table [dataSource]="course.students" class="mat-elevation-z8 tableSize">
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name</th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> Email</th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
