--- a/eeducation-front/src/app/course-lessons/course-lessons.component.html
+++ b/eeducation-front/src/app/course-lessons/course-lessons.component.html
@@ -1,10 +1,15 @@
 <div>
-  <div *ngFor="let lesson of course.lessons">
-    <span>{{lesson.name}}</span>
-    <span>{{lesson.date | date}}</span>
-    <button (click)="viewLesson(lesson.id)">View lesson</button>
+  <button class="margin-top-5 margin-bottom-5 margin-left-10" mat-raised-button (click)="createLesson()">Create Lesson</button>
+  <mat-list>
+    <mat-list-item  *ngFor="let lesson of course.lessons">
+      <span class="list-item">{{lesson.name}}</span>
+      <span class="list-item">{{lesson.date | date}}</span>
+      <button mat-raised-button class="list-item" (click)="viewLesson(lesson.id)">View lesson</button>
+    </mat-list-item>
+  </mat-list>
+  <div>
+
   </div>
   <div>
-    <button (click)="createLesson()">Create Lesson</button>
   </div>
 </div>
