--- a/eeducation-front/src/app/create-lesson/create-lesson.component.html
+++ b/eeducation-front/src/app/create-lesson/create-lesson.component.html
@@ -1,8 +1,9 @@
 <div>
-  <mat-card class="create-lesson-card">
+  <app-navbar></app-navbar>
+  <mat-card class="create-lesson-card preview">
     <div id="preview" ></div>
   </mat-card>
-  <div>
+  <div class="bottom">
     <mat-card class="create-lesson-card">
       <form class="form" [formGroup]="lessonForm" (ngSubmit)="lessonForm.valid && onLessonSubmit()">
         <mat-form-field class="field-full-width">
@@ -24,22 +25,22 @@
           <mat-error>ends can not be blank.</mat-error>
         </mat-form-field>
         <div id="pallet">
-          <div>
-            <button type='button' (click)="setElement('h1')">h1</button>
-            <button type='button' (click)="setElement('h2')">h2</button>
-            <button type='button' (click)="setElement('h3')">h3</button>
-            <button type='button' (click)="setElement('b')">bold</button>
-            <button type='button' (click)="setElement('i')">italic</button>
-            <button type='button' (click)="setElement('u')">underline</button>
-            <button type='button' (click)="setElement('q')">Quote</button>
-            <button type='button' (click)="setImage()">Image</button>
-            <button type='button' (click)="setVideo()">Video</button>
+          <div class="palleteButtons">
+            <button mat-raised-button type='button' (click)="setElement('h1')">h1</button>
+            <button mat-raised-button type='button' (click)="setElement('h2')">h2</button>
+            <button mat-raised-button type='button' (click)="setElement('h3')">h3</button>
+            <button mat-raised-button type='button' (click)="setElement('b')">bold</button>
+            <button mat-raised-button type='button' (click)="setElement('i')">italic</button>
+            <button mat-raised-button type='button' (click)="setElement('u')">underline</button>
+            <button mat-raised-button type='button' (click)="setElement('q')">Quote</button>
+            <button mat-raised-button type='button' (click)="setImage()">Image</button>
+            <button mat-raised-button type='button' (click)="setVideo()">Video</button>
           </div>
           <div>
             <textarea (keyup)="textChange($event)" id="textArea"></textarea>
           </div>
         </div>
-        <button>Add lesson</button>
+        <button mat-raised-button>Add lesson</button>
       </form>
     </mat-card>
   </div>
