--- a/eeducation-front/src/app/create-lesson/create-lesson.component.scss
+++ b/eeducation-front/src/app/create-lesson/create-lesson.component.scss
@@ -2,3 +2,24 @@
   min-width: 500px;
   min-height: 300px;
 }
+.palleteButtons button{
+  margin: 2px;
+}
+.form{
+  text-align: center;
+}
+.bottom{
+  width: 100%;
+  height: 50%;
+  overflow: scroll;
+  margin-top: 5px;
+}
+mat-form-field{
+  margin: 5px;
+}
+.preview{
+  height: 50vh;
+  overflow: scroll;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
