--- a/eeducation-front/src/app/index/index.component.html
+++ b/eeducation-front/src/app/index/index.component.html
@@ -1,39 +1,38 @@
 <div>
-  <div>
-    <button>Features</button>
-    <button>About</button>
-    <button>Contact</button>
-    <button (click)="login()">Sing In</button>
-    <button (click)="register()">Register</button>
-  </div>
-  <div class="page aquae">
+  <mat-toolbar>
+    <div class>Eeducation</div>
+    <span class="example-spacer"></span>
+    <button mat-button (click)="login()">Login</button>
+    <button mat-button (click)="register()">Register</button>
+  </mat-toolbar>
+  <mat-card class="small-card">
     <h1>Free online education website</h1>
-    <h3>Best free website to help schools, teachers and students to achieve better education</h3>
-    <video width="320" height="240" controls>
-      <source src="movie.mp4" type="video/mp4">
-      <source src="movie.ogg" type="video/ogg">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-  <div class="page antiquewhite">
-    <h2>Features</h2>
-    <h3>Online education enables teachers and students best experience online education. And it is absolutely free</h3>
-  </div>
-  <div class="page aquae">
-    <h2>Gallery</h2>
-    <h3>Interested how it looks?</h3>
-    <div>Image 1</div>
-    <div>Image 2</div>
-    <div>Image 3</div>
-  </div>
-  <div class="page aquae">
-    <div>
-      <h2>Our Mission</h2>
-      <h3>Our mission is to create tool to help teachers and students to achieve next level of education</h3>
-      <button>Join now</button>
-    </div>
-  </div>
-  <div>
+    <h3>This platform is free to use and create</h3>
+  </mat-card>
+  <mat-card class="small-card">
+    <h2>Create courses</h2>
+    <h3>You have the ability to create and manage courses. Whether you are teacher or school, you can create better
+      courses that ever before</h3>
+  </mat-card>
+  <mat-card class="small-card">
+    <h2>Manage students</h2>
+    <h3>Chose who gets to study your courses. You have full control who gets to join your school. Students can send you
+      request to join your school or you can invite them</h3>
+  </mat-card>
+  <mat-card class="small-card">
+    <h2>Grade students</h2>
+    <h3>You have the ability to add grades to your students using test or manually</h3>
+  </mat-card>
+  <mat-card class="small-card">
+    <h2>Manage absences</h2>
+    <h3>Did student missed day in school or zoom meeting? You can use our system to keep track of absent students</h3>
+  </mat-card>
+  <mat-card class="small-card">
+    <h2>Tests</h2>
+    <h3>You can create tests for your students and choose do you want to grade them yourself or have automatic
+      grading</h3>
+  </mat-card>
+  <div class="full-width">
     Made by Mile Prastalo, Novi Sad, Serbia
   </div>
 </div>
