--- a/eeducation-front/src/app/teacher-home/teacher-home.component.html
+++ b/eeducation-front/src/app/teacher-home/teacher-home.component.html
@@ -1,3 +1,18 @@
 <div>
-
+  <app-navbar></app-navbar>
+  <mat-tab-group class="center">
+    <mat-tab label="Courses">
+      <button (click)="createCourse()" class="firsRowButton" mat-raised-button>Create course</button>
+      <br>
+      <mat-card (click)="goCourse(course.id)" class="card" *ngFor="let course of courses">
+        <h2>{{course.name}}</h2>
+        Begins: {{course.begins|date}} Ends: {{course.ends|date}}
+      </mat-card>
+    </mat-tab>
+    <mat-tab label="Schools">
+      <mat-card (click)="goSchool(school.id)" class="card" *ngFor="let school of schools">
+        <h2>{{school.name}}</h2>
+      </mat-card>
+    </mat-tab>
+  </mat-tab-group>
 </div>
