--- a/eeducation-front/src/app/lesson/lesson.component.html
+++ b/eeducation-front/src/app/lesson/lesson.component.html
@@ -1,5 +1,6 @@
 <div>
   <h1>{{lesson.name}}</h1>
+  <h3>Lesson link: {{lesson.lessonLink}}</h3>
   <div id="lessonContent"></div>
   <div>
     <h2>Comments</h2>
