--- a/eeducation-front/src/app/create-test/create-test.component.html
+++ b/eeducation-front/src/app/create-test/create-test.component.html
@@ -29,20 +29,34 @@
                  placeholder="duration"/>
           <mat-error>duration can not be blank.</mat-error>
         </mat-form-field>
+        <mat-form-field class="field-full-width">
+          <mat-select id="testType"
+                      matInput
+                      formControlName="testType"
+                      placeholder="Test type">
+            <mat-option value="SELF_GRADING">Auto grading</mat-option>
+            <mat-option value="TEACHER_GRADING">Manual grading</mat-option>
+          </mat-select>
+          <mat-error>type can not be blank.</mat-error>
+        </mat-form-field>
       </form>
     </mat-card>
   </div>
-  <div>
-    Questions
-    <button (click)="addQuestion()">Add question</button>
-    <div *ngFor="let question of questions">
-      <h3>{{question.name}}</h3>
-      <h4>{{question.questionType}}</h4>
-      <div *ngIf="question.questionType=='MULTIPLE_CHOICE'|| question.questionType=='CHECKBOXES'">
-        <button (click)="addAnswer(question)">Add answer</button>
-      </div>
-
-      <div *ngFor="let answer of question.answer">{{answer.answerText}}</div>
-    </div>
+  <div class="center questions">
+    <h3>Questions:</h3>
+    <ol>
+      <li *ngFor="let question of questions">
+        <h3>{{question.name}}</h3>
+        <h4>{{getQuestionTypeString(question.questionType)}}</h4>
+        <ul>
+          <li *ngFor="let answer of question.answer">{{answer.answerText}}</li>
+        </ul>
+        <div *ngIf="question.questionType=='MULTIPLE_CHOICE'|| question.questionType=='CHECKBOXES'">
+          <button mat-raised-button (click)="addAnswer(question)">Add answer</button>
+        </div>
+      </li>
+    </ol>
+    <button mat-raised-button (click)="addQuestion()">Add question</button>
   </div>
+  <button mat-raised-button (click)="publishTest()">Create test</button>
 </div>
