--- a/eeducation-front/src/app/course-tests/course-tests.component.html
+++ b/eeducation-front/src/app/course-tests/course-tests.component.html
@@ -17,7 +17,7 @@
     <ng-container matColumnDef="take">
       <th mat-header-cell *cdkHeaderCellDef> Take test</th>
       <td mat-cell *cdkCellDef="let element">
-        <button (click)="takeTest(element.id)" mat-raised-button *ngIf="testButtonAvaiable(element)">Take test</button>
+        <button (click)="takeTest(element.id)" mat-raised-button>Take test</button>
       </td>
     </ng-container>
 
