--- a/eeducation-front/src/app/course-details/course-details.component.html
+++ b/eeducation-front/src/app/course-details/course-details.component.html
@@ -21,18 +21,22 @@
   </div>
   <mat-tab-group class="tabsCenter center" *ngIf="studentPartOfCourse() || teacherPartOfCourse()">
     <mat-tab label="Lessons">
+      <button *ngIf="teacherPartOfCourse()" class="margin-top-5 margin-bottom-5 margin-left-10" mat-raised-button (click)="createLesson()">Create Lesson</button>
       <app-course-lessons [course]="course"></app-course-lessons>
     </mat-tab>
     <mat-tab label="Students">
       <app-course-students [course]="course"></app-course-students>
     </mat-tab>
     <mat-tab label="Grades">
+      <button *ngIf="teacherPartOfCourse()" class="margin-bottom-5 margin-top-5" mat-raised-button (click)="addGrade()">Add grade</button>
       <app-course-grades [course]="course"></app-course-grades>
     </mat-tab>
     <mat-tab label="Tests">
+      <button *ngIf="teacherPartOfCourse()"  class="margin-top-5 margin-bottom-5" mat-raised-button (click)="goCreateTest()">Create test</button>
       <app-course-tests [course]="course"></app-course-tests>
     </mat-tab>
     <mat-tab label="Absences">
+      <button *ngIf="teacherPartOfCourse()"  class="margin-top-5 margin-bottom-5" mat-raised-button (click)="addAbsence()">Add absence</button>
       <app-course-absences [course]="course"></app-course-absences>
     </mat-tab>
     <mat-tab label="Student join requests" *ngIf="teacherPartOfCourse()">
