--- a/eeducation-front/src/app/create-lesson/create-lesson.component.html
+++ b/eeducation-front/src/app/create-lesson/create-lesson.component.html
@@ -1,8 +1,5 @@
 <div>
   <app-navbar></app-navbar>
-  <mat-card class="create-lesson-card preview" *ngIf="displayToolBox()">
-    <div id="preview"></div>
-  </mat-card>
   <div class="bottom">
     <mat-card class="create-lesson-card">
       <form class="form" [formGroup]="lessonForm" (ngSubmit)="lessonForm.valid && onLessonSubmit()">
@@ -36,28 +33,17 @@
           <mat-error>type can not be blank.</mat-error>
         </mat-form-field>
         <mat-form-field class="field-full-width" *ngIf="!displayToolBox()">
-          <input id="link"
-                 matInput
-                 formControlName="link"
-                 placeholder="link"/>
+          <mat-select id="link"
+                      matInput
+                      formControlName="link"
+                      placeholder="link">
+            <mat-option *ngFor="let lesson of lessonLinks"
+                        [value]="lesson.lessonContent">{{lesson.lessonName}}</mat-option>
+          </mat-select>
           <mat-error>link can not be blank.</mat-error>
         </mat-form-field>
-        <div id="pallet" *ngIf="displayToolBox()">
-          <div class="palleteButtons">
-            <button mat-raised-button type='button' (click)="setElement('h1')">h1</button>
-            <button mat-raised-button type='button' (click)="setElement('h2')">h2</button>
-            <button mat-raised-button type='button' (click)="setElement('h3')">h3</button>
-            <button mat-raised-button type='button' (click)="setElement('b')">bold</button>
-            <button mat-raised-button type='button' (click)="setElement('i')">italic</button>
-            <button mat-raised-button type='button' (click)="setElement('u')">underline</button>
-            <button mat-raised-button type='button' (click)="setElement('q')">Quote</button>
-            <button mat-raised-button type='button' (click)="setImage()">Image</button>
-            <button mat-raised-button type='button' (click)="setVideo()">Video</button>
-          </div>
-          <div>
-            <textarea (keyup)="textChange($event)" id="textArea"></textarea>
-          </div>
-        </div>
+        <quill-editor (onContentChanged)="quillEditorChange($event)" id="quill" *ngIf="displayToolBox()">
+        </quill-editor>
         <button mat-raised-button>Add lesson</button>
       </form>
     </mat-card>
